<resources>
    <string name="app_name">Access Food</string>

    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Log Out</string>

    <string-array
        name="sort_option">
        <item>Distance</item>
        <item>Rating</item>
    </string-array>


    <string name="title_activity_map">Map</string>

    <string name="title_activity_login">Log In</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <string name="facebook_app_id">1624814521114246</string>

    <string name="parse_app_id">f6l2pZcEvoOFI1O1mvueXd3Wz0bijxEg17qFmvsm</string>
    <string name="parse_client_key">fxm9grVH2lvRDVX7e0iaidBuN58miKwVOiZMyMve</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Error!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="logout_label">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="splash_access">splash_access</string>
    <string name="splash_food">splash_food</string>
    <string name="splash_nyc">splash_nyc</string>
    <string name="splash_nyc_pic">splash_nycpic</string>

    <string name="title_activity_vendor">Vendor Info</string>

    <string name="detail_section_text">Vendor Details</string>
    <string name="title_activity_user_review">UserReviewActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_user_favorite">Favorite</string>
    <string name="title_activity_pic">PicActivity</string>
</resources>
