<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <rayacevedo45.c4q.nyc.accessfoodnyc.vendor.GifView
        android:id="@+id/gif_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accessID"
            android:src="@drawable/access_img2"
            android:layout_gravity="left"
            android:paddingLeft="30dp"
            android:contentDescription="@string/splash_access" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foodID"
            android:gravity="right"
            android:src="@drawable/food_img2"
            android:layout_gravity="right"
            android:paddingRight="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:contentDescription="@string/splash_food" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NYCID"
            android:src="@drawable/nyc_img_2"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:contentDescription="@string/splash_nyc" />

        <ImageView
            android:id="@+id/nyc_img_splash"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_gravity="bottom"
            android:src="@drawable/newyork1_meitu_2"
            android:contentDescription="@string/splash_nyc_pic" />

    </LinearLayout>


</LinearLayout>
