<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="35dp"
    tools:context=".SignUpActivity"
    android:background="#ffff6810">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:background="@drawable/edittextstyle">

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/username_hint"
        android:textColor="#020100"
        android:textColorHint="#020100">
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameField"
        android:layout_below="@+id/usernameField"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textColor="#020100"
        android:textColorHint="#020100"/>

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:textColor="#020100"
        android:textColorHint="#020100"/>

    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        android:text="@string/sign_up_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:typeface="monospace"
        android:textStyle="bold"
        android:textColor="#020100"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/edittextstyle"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp" />
</RelativeLayout>